k8/prod/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  labels:
    app: app-service
spec:
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: app2
